[project]
name = "doc-rag"
version = "0.1.0"
description = "Industrial-grade RAG over PDF documents"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "langchain-chroma>=0.1",
    "pymupdf>=1.24",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "rich>=13",
    "docling>=2.82.0",
    "langchain-docling>=2.0.0",
]

[tool.uv]
package = false
