[project]
name = "doc-rag"
version = "0.1.0"
description = "Industrial-grade RAG over PDF documents"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-classic>=1.0",
    "langchain-ollama>=0.2",
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "rich>=13",
    "pymupdf4llm>=0.0.17",
    "easyocr>=1.7",
]

[tool.uv]
package = false
